Fix html whitespace creating gaps between elements in forms

--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -152,8 +152,16 @@ form {
       cursor: pointer;
 
       ~ label {
+        padding-left: 10px;
         font-size: 1em;
         cursor: pointer;
+      }
+    }
+
+    output {
+      ~ label {
+        padding-left: 10px;
+        font-size: 1em;
       }
     }
 
